--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-python-dateutil==2.6.0
-pytz==2016.10
-pyparsing==2.1.10
-mako==1.0.6
+python-dateutil==2.6.1
+pytz==2017.3
+pyparsing==2.2.0
+mako==1.0.7
 future==0.16.0
 py3o.template==0.9.12
+signxml==2.4.0
+lxml==4.1.0
+pyOpenSSL==17.3.0
