[FIX] Requirements esquecidos

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ mako==1.0.7
 future==0.16.0
 py3o.template==0.9.12
 signxml==2.4.0
-lxml==4.1.0
-pyOpenSSL==17.3.0
+lxml==4.1.1
+pyOpenSSL==17.4.0
 sh==1.12.14
 reportlab==3.4.0
+numpy==1.14.0
+email-validator=1.0.3
