[FIX] Corrigindo requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-python-dateutil==2.6.1
-pytz==2017.3
-pyparsing==2.2.0
-mako==1.0.7
-future==0.16.0
-py3o.template==0.9.12
-signxml==2.4.0
-lxml==4.1.1
-pyOpenSSL==17.4.0
-sh==1.12.14
-reportlab==3.4.0
-numpy==1.14.0
 email-validator==1.0.3
-barcode==0.8.0
+future==0.16.0
+lxml==4.2.1
+mako==1.0.7
+numpy==1.14.2
+py3o.template==0.9.12
+pyOpenSSL==17.5.0
+pyparsing==2.2.0
+python-dateutil==2.7.2
+pytz==2018.4
 qrcode==5.3
+reportlab==3.4.0
+sh==1.12.14
+signxml==2.5.2
+viivakoodi==0.8.0
